[gd_scene load_steps=13 format=3 uid="uid://c30kf2lfxl2m4"]

[ext_resource type="Script" path="res://CardManager.gd" id="1_ajda0"]
[ext_resource type="Script" path="res://player_hand.gd" id="3_khy05"]
[ext_resource type="Script" path="res://MagicCardSlot.gd" id="3_mvwwl"]
[ext_resource type="Texture2D" uid="uid://c7bn7rin5slvd" path="res://image/CarteDos.png" id="4_ejgxf"]
[ext_resource type="PackedScene" uid="uid://drtmtmxm2xrcj" path="res://Scenes/OpponentCardSlot.tscn" id="4_ou1ox"]
[ext_resource type="Script" path="res://deck.gd" id="4_u2h8i"]
[ext_resource type="PackedScene" uid="uid://dnk8p6illxobu" path="res://Scenes/card_slot.tscn" id="4_ua3io"]
[ext_resource type="Script" path="res://input_manager.gd" id="6_46ig2"]
[ext_resource type="Script" path="res://OpponentHand.gd" id="6_yiq5c"]
[ext_resource type="Script" path="res://BattleManager.gd" id="9_piupp"]
[ext_resource type="Script" path="res://OpponentDeck.gd" id="10_cb82r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pipas"]
size = Vector2(184, 268)

[node name="Main" type="Node2D"]

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_ajda0")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot1" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(800, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_mvwwl")

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(950, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_mvwwl")

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(1100, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_mvwwl")

[node name="CardSlot4" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(1250, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_mvwwl")

[node name="CardSlot5" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(1400, 750)
scale = Vector2(0.6, 0.6)
script = ExtResource("3_mvwwl")

[node name="CardSlot6" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(800, 650)
scale = Vector2(0.6, 0.6)

[node name="CardSlot7" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(950, 650)
scale = Vector2(0.6, 0.6)

[node name="CardSlot8" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(1100, 650)
scale = Vector2(0.6, 0.6)

[node name="CardSlot9" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(1250, 650)
scale = Vector2(0.6, 0.6)

[node name="CardSlot10" parent="CardSlots" instance=ExtResource("4_ua3io")]
z_index = -3
position = Vector2(1400, 650)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot1" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(800, 400)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot2" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(950, 400)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot3" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(1100, 400)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot4" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(1250, 400)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot5" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(1400, 400)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot6" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(800, 300)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot7" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(950, 300)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot8" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(1100, 300)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot9" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(1250, 300)
scale = Vector2(0.6, 0.6)

[node name="EnemyCardSlot10" parent="CardSlots" instance=ExtResource("4_ou1ox")]
position = Vector2(1400, 300)
scale = Vector2(0.6, 0.6)

[node name="PlayerHand" type="Node2D" parent="."]
script = ExtResource("3_khy05")

[node name="OpponentHand" type="Node2D" parent="."]
script = ExtResource("6_yiq5c")

[node name="Deck" type="Node2D" parent="."]
position = Vector2(140, 955)
scale = Vector2(0.8, 0.8)
script = ExtResource("4_u2h8i")

[node name="Sprite2D" type="Sprite2D" parent="Deck"]
z_index = -2
texture = ExtResource("4_ejgxf")

[node name="Area2D" type="Area2D" parent="Deck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deck/Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_pipas")

[node name="RichTextLabel" type="RichTextLabel" parent="Deck"]
modulate = Color(0, 0, 0, 1)
z_index = -2
offset_left = -66.0
offset_top = -124.0
offset_right = -26.0
offset_bottom = -84.0
scale = Vector2(2, 2)
text = "0"

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 600.0
offset_top = 700.0
offset_right = 678.0
offset_bottom = 731.0
text = "End Turn
"

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("6_46ig2")

[node name="OpponentDeck" type="Node2D" parent="."]
position = Vector2(1700, 125)
script = ExtResource("10_cb82r")

[node name="Sprite2D" type="Sprite2D" parent="OpponentDeck"]
z_index = -2
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_ejgxf")

[node name="RichTextLabel" type="RichTextLabel" parent="OpponentDeck"]
modulate = Color(0, 0, 0, 1)
z_index = -2
offset_left = 1647.2
offset_top = 25.8
offset_right = 1687.2
offset_bottom = 65.8
scale = Vector2(2, 2)
text = "0"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("9_piupp")

[node name="BattleTimer" type="Timer" parent="."]

[connection signal="pressed" from="EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
